[gd_scene load_steps=13 format=3 uid="uid://cy6wjpdarhcr0"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_mboxy"]
[ext_resource type="Texture2D" uid="uid://cyhvv75gpmtwg" path="res://assets/background/rocks_2.png" id="1_p0c8v"]
[ext_resource type="PackedScene" uid="uid://wjwnt8y3gm3a" path="res://scenes/plane/plane.tscn" id="2_01r46"]
[ext_resource type="PackedScene" uid="uid://biwaqh1itavee" path="res://scenes/parallax_image/parallax_image.tscn" id="2_23pp5"]
[ext_resource type="PackedScene" uid="uid://b7rox04w35k66" path="res://scenes/scrolling_bg/scrolling_bg.tscn" id="2_ctd2a"]
[ext_resource type="PackedScene" uid="uid://b1rlkmvkhgyh1" path="res://scenes/barrier/barrier.tscn" id="3_f0w1v"]
[ext_resource type="Texture2D" uid="uid://b3ryx2giga4fy" path="res://assets/background/sky.png" id="3_g23sg"]
[ext_resource type="Texture2D" uid="uid://c2mwftt46xein" path="res://assets/background/clouds_2.png" id="4_oitrv"]
[ext_resource type="PackedScene" uid="uid://cpw5srb47ixif" path="res://scenes/pipes/pipes.tscn" id="4_v335j"]
[ext_resource type="Texture2D" uid="uid://cd631b7j61fc0" path="res://assets/background/rocks_1.png" id="5_d646t"]
[ext_resource type="PackedScene" uid="uid://dqxkmoxsjullg" path="res://scenes/game_over_ui/game_over_ui.tscn" id="6_lsscc"]
[ext_resource type="PackedScene" uid="uid://drkksmho0xrh" path="res://scenes/hud/hud.tscn" id="7_7a6g2"]

[node name="Game" type="Node2D"]
script = ExtResource("1_mboxy")

[node name="ParallaxBg" type="Node2D" parent="."]
position = Vector2(0, 427)

[node name="ParallaxImage" parent="ParallaxBg" instance=ExtResource("2_23pp5")]
scroll_scale = Vector2(0, 0)
texture = ExtResource("3_g23sg")

[node name="ParallaxImage2" parent="ParallaxBg" instance=ExtResource("2_23pp5")]
scroll_scale = Vector2(0.25, 0.25)
texture = ExtResource("4_oitrv")

[node name="ParallaxImage3" parent="ParallaxBg" instance=ExtResource("2_23pp5")]
scroll_scale = Vector2(0.5, 0.5)
texture = ExtResource("5_d646t")

[node name="ParallaxImage4" parent="ParallaxBg" instance=ExtResource("2_23pp5")]
scroll_scale = Vector2(0.65, 0.65)
texture = ExtResource("1_p0c8v")

[node name="ScrollingBg" parent="." instance=ExtResource("2_ctd2a")]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(264, 470)
texture = ExtResource("1_p0c8v")

[node name="Plane" parent="." instance=ExtResource("2_01r46")]
position = Vector2(73, 459)

[node name="BarrierTop" parent="." instance=ExtResource("3_f0w1v")]
position = Vector2(6, -26)

[node name="BarrierBottom" parent="." instance=ExtResource("3_f0w1v")]
position = Vector2(5, 871)

[node name="SpawnUp" type="Marker2D" parent="."]
position = Vector2(530, 360)

[node name="SpawnDown" type="Marker2D" parent="."]
position = Vector2(530, 560)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.2
autostart = true

[node name="PipesHolder" type="Node" parent="."]

[node name="Pipes" parent="PipesHolder" instance=ExtResource("4_v335j")]
position = Vector2(383, 410)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverUI" parent="CanvasLayer" instance=ExtResource("6_lsscc")]
visible = false

[node name="Hud" parent="CanvasLayer" instance=ExtResource("7_7a6g2")]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
